Added ViewModelViewHost to allow any control inside the DocumentTabControl

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -283,8 +283,8 @@
     <Compile Include="Controls\TabControlViewModel.cs" />
     <Compile Include="Debugging\BreakPointMargin.cs" />
     <Compile Include="Controls\Editor\SymbolViewModel.cs" />
-    <Compile Include="Controls\Editor.paml.cs">
-      <DependentUpon>Editor.xaml</DependentUpon>
+    <Compile Include="Controls\EditorView.xaml.cs">
+      <DependentUpon>EditorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Editor\EditorModel.cs" />
     <Compile Include="Controls\Editor\EditorViewModel.cs" />
@@ -359,7 +359,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Controls\Editor.xaml">
+    <EmbeddedResource Include="Controls\EditorView.xaml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainMenu.paml">
