--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Utils\SerializedObject.cs" />
     <Compile Include="Utils\TcpUtils.cs" />
     <Compile Include="Utils\WeakSubscriber.cs" />
+    <Compile Include="Utils\StringUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Controls\ControlTheme.paml" />
