Load video feed images

--- a/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
@@ -252,6 +252,7 @@
     <Compile Include="SolutionExplorer\StandardProjectViewModel.cs">
       <DependentUpon>SolutionExplorerView.paml</DependentUpon>
     </Compile>
+    <Compile Include="WelcomeScreen\VideoFeed.cs" />
     <Compile Include="WelcomeScreen\NewsFeed.cs" />
     <Compile Include="WelcomeScreen\RecentProject.cs" />
     <Compile Include="WelcomeScreen\RecentProjectViewModel.cs" />
