--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Languages\AccessType.cs" />
     <Compile Include="Languages\CompletionAssistance\ICompletionAssistant.cs" />
     <Compile Include="Languages\CompletionAssistance\SignatureHelpModels.cs" />
+    <Compile Include="Languages\Highlighting\TextColoringTransformer.cs" />
     <Compile Include="Languages\IndexEntry.cs" />
     <Compile Include="MainMenu\IMenu.cs" />
     <Compile Include="MainMenu\IMenuBuilder.cs" />
