--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -256,6 +256,7 @@
       <DependentUpon>DebugHoverProbeView.paml</DependentUpon>
     </Compile>
     <Compile Include="Controls\DebugHoverProbeViewModel.cs" />
+    <Compile Include="Controls\Editor\IntellisenseManager.cs" />
     <Compile Include="Controls\ErrorProbe.paml.cs">
       <DependentUpon>ErrorProbeView.paml</DependentUpon>
     </Compile>
