--- a/AvalonStudio/AvalonStudio.TextEditor/packages.config
+++ b/AvalonStudio/AvalonStudio.TextEditor/packages.config
@@ -11,9 +11,9 @@
   <package id="Splat" version="1.6.2" targetFramework="net452" />
   <package id="Sprache" version="2.0.0.51" targetFramework="net452" />
   <package id="System.Reactive" version="3.0.0" targetFramework="net451" />
-  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net451" requireReinstallation="true" />
   <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net451" />
-  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net451" />
-  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net451" requireReinstallation="true" />
   <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net451" />
 </packages>
