fix a bug that caused the project creation dialog to not show
added a stub omnisharp project to allow the dialog to discover templates without crashing when the C# template was encountered

--- a/AvalonStudio/AvalonStudio.Projects.OmniSharp/AvalonStudio.Projects.OmniSharp.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.OmniSharp/AvalonStudio.Projects.OmniSharp.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlankOmniSharpProjectTemplate.cs" />
     <Compile Include="OmniSharpProject.cs" />
     <Compile Include="OmniSharpSolution.cs" />
     <Compile Include="OmniSharp\AutoCompleteOmniSharpRequest.cs" />
