--- a/AvalonStudio/AvalonStudio.Toolchains.TypeScript/AvalonStudio.Toolchains.TypeScript.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.TypeScript/AvalonStudio.Toolchains.TypeScript.csproj
@@ -49,6 +49,14 @@
       <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
       <Name>AvalonStudio.Extensibility</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects.Standard\AvalonStudio.Projects.Standard.csproj">
+      <Project>{4726219f-2e8e-4f65-a5ad-3167e3dbf56c}</Project>
+      <Name>AvalonStudio.Projects.Standard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains.Standard\AvalonStudio.Toolchains.Standard.csproj">
+      <Project>{72c71854-5897-4e14-a1ae-b3b48f139af7}</Project>
+      <Name>AvalonStudio.Toolchains.Standard</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
