--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -476,6 +476,10 @@
       <Project>{4726219F-2E8E-4F65-A5AD-3167E3DBF56C}</Project>
       <Name>AvalonStudio.Projects.Standard</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects.TypeScript\AvalonStudio.Projects.TypeScript.csproj">
+      <Project>{047aa86d-1afa-49fb-ab5c-cbf729b7fb05}</Project>
+      <Name>AvalonStudio.Projects.TypeScript</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Repository\AvalonStudio.Repositories.csproj">
       <Project>{29C948E9-4D96-4490-B039-A5BBF6EEC2E5}</Project>
       <Name>AvalonStudio.Repositories</Name>
