--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,12 @@ script:
   - cd AvalonBuild
   - git rm -rf .
   - git clean -fxd
-  - cp ../AvalonStudio/AvalonStudioBuild/bin/x86/Release/*.* ./
+  - cp -a ../AvalonStudio/AvalonStudioBuild/bin/x86/Release/. ./
   - git add .
   - git commit -m 'new CI revision.'
   - git push -f -q https://<VitalElement:$GH_TOKEN@github.com/VitalElement/AvalonBuild master &2>/dev/null
   - cd ..
+  - pwd
   - cd AvalonStudio/AvalonStudioBuild
   - docker build --no-cache -t vitalelement/avalon .
   # fi
