--- a/AvalonStudio/AvalonStudioBuild/Dockerfile
+++ b/AvalonStudio/AvalonStudioBuild/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update \
 
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
 
-RUN echo "deb http://download.mono-project.com/repo/debian wheezy/snapshots/4.2.2.30 main" > /etc/apt/sources.list.d/mono-xamarin.list \
+RUN echo "deb http://download.mono-project.com/repo/debian wheezy main" > /etc/apt/sources.list.d/mono-xamarin.list \
 	&& apt-get update \
 	&& apt-get install -y mono-devel ca-certificates-mono fsharp mono-vbnc nuget \
 	&& rm -rf /var/lib/apt/lists/*
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get install -y git libcurl3 lib32z1 lib32ncurses5
 
 # Install Built Tools
 RUN mkdir -p /opt/AvalonBuild
-RUN git clone  https://github.com/VitalElement/AvalonBuild.git   /opt/AvalonBuild
+RUN git    clone --depth 1 https://github.com/VitalElement/AvalonBuild.git   /opt/AvalonBuild  
 
 # Install avalon command
 RUN echo "#!/bin/sh" > /usr/bin/avalon
