--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,6 @@ script:
   - git rm -rf .
   - git clean -fxd
   - cd ..
-  - pwd
-  - ls ./AvalonStudioBuild/bin/
-  - ls ./AvalonStudioBuild/bin/Release/
   - cp -a ./AvalonStudioBuild/bin/Release/. ./AvalonBuild/
   - cd AvalonBuild
   - git add .
@@ -37,7 +34,8 @@ script:
 after_success:
   #- if [ "$TRAVIS_BRANCH" == "master" ]; then
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-  - docker push vitalelement/avalon;
+  - docker images
+  - docker push vitalelement/avalon:cibuild;
   #  fi
 notifications:
   webhooks:
