--- a/AvalonStudio/AvalonStudio.Projects.TypeScript/AvalonStudio.Projects.TypeScript.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.TypeScript/AvalonStudio.Projects.TypeScript.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="BlankTypeScriptProjectTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeScriptProject.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
