add image to splash

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -508,6 +508,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\grip_pattern.png" />
     <Content Include="icon.ico" />
+    <EmbeddedResource Include="icon.png" />
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
