--- a/.travis.yml
+++ b/.travis.yml
@@ -14,29 +14,29 @@ before_install:
 install:  
 script:
   - sudo ./buildmono.sh
-
   #- if [ "$TRAVIS_BRANCH" == "master" ]; then
-  - git clone https://github.com/VitalElement/AvalonBuild.git
-  - cd AvalonBuild
-  - git rm -rf .
-  - git clean -fxd
   - cd ..
-  - cp -a ./AvalonStudioBuild/bin/Release/. ./AvalonBuild/
+  - mkdir dockerbuild
+  - cd dockerbuild
+  - mkdir opt
+  - cd opt
+  - mkdir AvalonBuild
   - cd AvalonBuild
-  - git add .
-  - git commit -m 'new CI revision.' || true
-  - git push -f -q https://VitalElement:$GH_TOKEN@github.com/VitalElement/AvalonBuild master &2>/dev/null
+  - cp -a ./AvalonStudioBuild/bin/Release/. ./
   - cd ..
-  - cd AvalonStudioBuild
-  - docker build --no-cache -t vitalelement/avalon:cibuild .
+  - cd ..
+  - cd ..
+  - cp ./AvalonStudioBuild/Dockerfile ./dockerbuild/Dockerfile
+  - cd dockerbuild
+  - docker build -t vitalelement/avalon:cibuild .
   # fi
 
 after_success:
-  #- if [ "$TRAVIS_BRANCH" == "master" ]; then
-  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-  - docker images
-  - docker push vitalelement/avalon:cibuild;
-  #  fi
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker images
+    docker push vitalelement/avalon:cibuild;
+  - fi
 notifications:
   webhooks:
     urls:
