--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ install:
 script:
   - sudo ./buildmono.sh
   #- if [ "$TRAVIS_BRANCH" == "master" ]; then
-  - cd ..
   - mkdir dockerbuild
   - cd dockerbuild
   - mkdir opt
@@ -25,6 +24,7 @@ script:
   - cd ..
   - cd ..
   - cd ..
+  - pwd
   - cp -a ./AvalonStudioBuild/bin/Release/. ./dockerbuild/opt/AvalonBuild/
   - cp ./AvalonStudioBuild/Dockerfile ./dockerbuild/Dockerfile
   - cd dockerbuild
