--- a/AvalonStudio/AvalonStudioBuild/Dockerfile
+++ b/AvalonStudio/AvalonStudioBuild/Dockerfile
@@ -16,8 +16,10 @@ RUN echo "deb http://download.mono-project.com/repo/debian wheezy main" > /etc/a
 RUN apt-get update && apt-get install -y git libcurl3 lib32z1 lib32ncurses5
 
 # Install Built Tools
-RUN mkdir -p /opt/AvalonBuild
-RUN git    clone --depth 1 https://github.com/VitalElement/AvalonBuild.git   /opt/AvalonBuild  
+RUN ls /opt/
+RUN ls /opt/AvalonBuild
+#RUN mkdir -p /opt/AvalonBuild
+#RUN git    clone --depth 1 https://github.com/VitalElement/AvalonBuild.git   /opt/AvalonBuild  
 
 # Install avalon command
 RUN echo "#!/bin/sh" > /usr/bin/avalon
